--- a/style.css
+++ b/style.css
@@ -61,21 +61,33 @@ li a {
     display: flex;
     background-color: orange;
     border-radius: 25px;
-    width: 85%;
+    width: 75%;
     min-height: 500px;
     margin: auto;
     justify-content: space-evenly;
     align-items: center;
     font-size: 3.0rem;
-    padding: 0;
+    padding: 0 20px 0 0;
     color: white;
     margin: 5em auto 0 auto;
     background-color: rgba(240, 240, 240, 0.247);
 }
 
+.description {
+    text-shadow: 2px 2px 3px black;
+}
+
+.title {
+    margin-bottom: 30px;
+    text-shadow: 1px 1px 5px #dce2e4, 2px 2px 3px black;
+}
+
 .temple-image {
     width: 500px;
     height: 100%;
+    box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.205); 
+    /* filter: drop-shadow(0 0 0.75rem #1d1c1c42); */
+    border-radius: 25px;
 }
 
 .temple-right {
@@ -84,7 +96,7 @@ li a {
     flex-direction: column;
     margin-top: 15px;
     margin-right: 10px;
-    text-shadow: 1px 1px 10px #dce2e4;
+    text-shadow: 1px 1px 5px #dce2e4, 2px 2px 3px black;
 }
 
 .image-text {
@@ -98,11 +110,6 @@ li a {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
-
-.title {
-    margin-bottom: 30px;
-    text-shadow: 1px 1px 10px #dce2e4;
 }
 
 .layer1 {
@@ -123,10 +130,13 @@ li a {
     gap: 40px;
     justify-content: center;
     align-items: center;
+    color: white;
+    font-size: 2.2rem;
+    text-shadow: 2px 2px 3px black;
 }
 
 .airbenders-heading {
-    text-shadow: 1px 1px 10px #dce2e4;
+    text-shadow: 1px 1px 5px #dce2e4, 2px 2px 3px black;
     color: white;
     font-size: 3.0rem;
 }
@@ -136,13 +146,18 @@ li a {
     text-align: center;
 }
 
-.gyatso {
-    text-shadow: 1px 1px 10px #dce2e4;
-    box-shadow: #12a4d4;
+.gyatso-text {
 }
 
 .l2heading {
     text-shadow: 1px 1px 10px #dce2e4;
     text-align: center;
     margin-top: 10px;
+}
+
+.gyatso,
+.avatar-yangchen,
+.pasang-img,
+.jinju-img {
+    box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.205);
 }
