--- a/style.css
+++ b/style.css
@@ -265,3 +265,43 @@ li a {
     text-shadow: 2px 2px 3px black;
 }
 
+
+.link {
+    margin-top: 20.5rem;
+    margin-bottom: 10.5rem;
+    display: flex;
+    padding: 40px;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 228, 196, 0.856);
+    color: white;
+    text-shadow: 1px 1px 10px #dce2e4;
+    
+}
+
+.song-lyrics {
+    text-align: start;
+    padding: 40px;
+}
+
+.secret {
+    margin-bottom: 5px;
+    font-size: 3.0rem;
+}
+
+.song-link {
+    text-decoration: none;
+    list-style-type: none;
+    background-color: black;
+    padding: 15px;
+    border-radius: 15px;
+}
+
+a:link {
+    color: white;
+}
+
+a:visited {
+    color: white;
+}
